# Learning_FastAPI

learn_fastapi/: blogs_crud.py  main.py  pyproject.toml
learn_fastapi/schema/: schemas.py
